--- a/Modul 2/company.profile/css/style.css
+++ b/Modul 2/company.profile/css/style.css
@@ -9,7 +9,7 @@ a {
 }
 .medsos {
 	padding:5px 0;
-	background-color: #8f8f14;
+	background: linear-gradient(to right,#6a71f8,#78DFF5);
 }
 .medsos ul li {
 	display: inline-block;
@@ -28,7 +28,7 @@ a {
 header h1 {
 	float: left;
 	padding:15px 0;
-	color: #8f8f14;
+	color: #6a71f8;
 }
 header ul {
 	float: right;
@@ -41,11 +41,11 @@ header ul li a {
 	display: inline-block;
 }
 header ul li a:hover {
-	background-color: #8f8f14;
+	background-color: #78DFF5;
 	color: #fff;
 }
 .active {
-	background-color: #8f8f14;
+	background-color: #78DFF5;
 	color: #fff;
 }
 .banner {
@@ -65,7 +65,7 @@ header ul li a:hover {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(126, 146, 80, 0.6);
+	background-color: rgba(67, 151, 254, 0.436);
 }
 .banner h2 {
 	color: #fff;
@@ -97,7 +97,7 @@ section h3 {
 	background-color: #f9f9f9;
 }
 .box {
-	color: #8f8f14;
+	color: #6a71f8;
 }
 .box:after {
 	content: '';
@@ -126,7 +126,7 @@ section h3 {
 }
 footer {
 	padding:30px 0;
-	background-color: #120e10;
+	background-color: #6a71f8;
 	color: #fff;
 	text-align: center;
 }
@@ -153,7 +153,7 @@ footer {
 	animation: puterin .8s linear infinite;
 }
 .label {
-	background-color: #8f8f14;
+	background: linear-gradient(to right,#6a71f8,#78DFF5);
 	color: #fff;
 }
 @keyframes puterin {
