--- a/game-hasan-uas/uas.css
+++ b/game-hasan-uas/uas.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'poppins', sans-serif;
+  margin: 0;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 2px;
   background-color: #071952;
 }
   
@@ -38,7 +39,8 @@ body {
   font-size: 40px;
   font-weight:900;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 0;
+  filter: drop-shadow(5px .2rem 1px #fdffda);
 }
   
 .content {
@@ -60,7 +62,7 @@ body {
   
 .foto-profil {
   display: block;
-  max-width: 100px;
+  max-width: 170px;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;;
@@ -178,7 +180,7 @@ body {
   margin-top: 8px;
   margin-right: auto;
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px 15px;
   background-color: #071952;
   color: #ffffff;
   text-decoration: none;
@@ -199,7 +201,6 @@ body {
               0 0 10px #f91d1d
 }
 
-/* CSS untuk input nama pemain */
 .player-name {
   margin: 25px;
   display: block;
@@ -210,11 +211,11 @@ body {
 }
 
 .text {
-  margin: auto; /* Menggunakan margin: 10px auto; untuk pemusatannya */
+  margin: auto;
   display: flex;
-  justify-content: center; /* Menggunakan justify-content: center; untuk pemusatan horizontal */
-  align-items: center; /* Menggunakan align-items: center; untuk pemusatan vertikal */
-  padding: 4px;
+  justify-content: center;
+  align-items: center; 
+  padding: 3px;
   background-color: #fff;
   width: 200px;
   height: 30px;
@@ -223,3 +224,49 @@ body {
   text-align: center;
   border: 3px solid #071952;
 }
+
+.particles {
+	display: flex;
+  padding: 0 20px;
+	z-index: -1;
+	position:fixed;
+  top: 0px;
+  left: -370px;
+}
+
+.particles span {
+	position: relative;
+	bottom: 25px;
+	width: 25px;
+	height: 25px;
+	background: #071952;
+	box-shadow: 0 0 0 10px #07195246,
+	0 0 50px #071952,
+	-100px 0 #07195246,
+	100px 0 #f7e6c492;
+	margin: 0 1px;
+	border-radius: 60%;
+	animation: animate 1s ease infinite;
+	animation-duration: calc(120s / var(--i));
+}
+
+.particles span:nth-child(even) {
+	background: #F7E6C4;
+	box-shadow: 0 0 0 10px #f7e6c43c,
+	0 0 50px #F7E6C4,
+	-100px 0 #35A29F,
+	100px 0 #071952;
+}
+
+@keyframes animate {
+	0% {
+		transform: translateY(120vh) scale(0) rotate(0deg);
+	}
+	20% {
+		transform: translateY(100vh) scale(1) rotate(0deg);
+	}
+	100% {
+		transform: translateY(-50vh) scale(0.5) rotate(360deg);
+	}
+}
+
