--- a/game-hasan-uas/aset-game/game.css
+++ b/game-hasan-uas/aset-game/game.css
@@ -199,3 +199,48 @@ h1 {
   color: #9aca96;
   filter: drop-shadow(5px .2rem 1px #000000);
 }
+
+.particles {
+	display: flex;
+  padding: 0 20px;
+	z-index: -1;
+	position:fixed;
+  top: 0px;
+  left: -370px;
+}
+
+.particles span {
+	position: relative;
+	bottom: 25px;
+	width: 25px;
+	height: 25px;
+	background: #071952;
+	box-shadow: 0 0 0 10px #07195246,
+	0 0 50px #071952,
+	-100px 0 #07195246,
+	100px 0 #f7e6c492;
+	margin: 0 1px;
+	border-radius: 60%;
+	animation: animate 1s ease infinite;
+	animation-duration: calc(120s / var(--i));
+}
+
+.particles span:nth-child(even) {
+	background: #F7E6C4;
+	box-shadow: 0 0 0 10px #f7e6c43c,
+	0 0 50px #F7E6C4,
+	-100px 0 #35A29F,
+	100px 0 #071952;
+}
+
+@keyframes animate {
+	0% {
+		transform: translateY(120vh) scale(0) rotate(0deg);
+	}
+	20% {
+		transform: translateY(100vh) scale(1) rotate(0deg);
+	}
+	100% {
+		transform: translateY(-50vh) scale(0.5) rotate(360deg);
+	}
+}
