--- a/game-hasan-uas/aset-game/game.css
+++ b/game-hasan-uas/aset-game/game.css
@@ -126,6 +126,10 @@ h1 {
   background: rgb(194, 21, 247);
 }
 
+.ws-found4 {
+  background: rgb(255, 72, 218);
+}
+
 
 .ws-game-over-outer {
   background: rgba(0, 0, 0, 0.85);
